Dockerfile for both whistle-log and whistle-ui

--- a/whistle-py/Dockerfile
+++ b/whistle-py/Dockerfile
@@ -13,14 +13,20 @@ RUN apk --update upgrade && \
 # Install Python.
 RUN \
   apk update && \
-  apk add python && \
+  apk add python py-pip && \
   apk add py-setuptools && \
-  mkdir -p /opt/pf9/whistle-log
+  mkdir -p /opt/pf9/whistle-log/whistle-py/logs
 
-ADD . /opt/pf9/whistle-log
+# Install gunicorn
+RUN apk --update add py-gunicorn
+
+ADD . /opt/pf9/whistle-log/whistle-py
 RUN \
-  cd /opt/pf9/whistle-log && \
+  cd /opt/pf9/whistle-log/whistle-py && \
   python setup.py install
 
+COPY run.sh /opt/pf9/whistle-log/whistle-py
+WORKDIR /opt/pf9/whistle-log/whistle-py
+
 # Define default command.
-CMD ["/opt/pf9/whistle-log/web_server.py"]
+CMD ["/opt/pf9/whistle-log/whistle-py/run.sh"]
